--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "start-dev": "nodemon node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "mongoose": "^5.9.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.22",
     "uuid": "^9.0.0"
   }
 }
